force-app/main/default/objects/Portfolio_Skill__c/Portfolio_Skill__c.object-meta.xml
<CustomObject>
    <label>Portfolio Skill</label>
    <pluralLabel>Portfolio Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>