force-app/main/default/objects/Portfolio_Skill__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Proficiency</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>