force-app/main/default/objects/Portfolio_Skill__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Frontend</fullName><default>false</default></value>
            <value><fullName>Backend</fullName><default>false</default></value>
            <value><fullName>Tool</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>